--- a/api-gateway/src/main/resources/application-k8s.yml
+++ b/api-gateway/src/main/resources/application-k8s.yml
@@ -4,13 +4,6 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: user-service
-          uri: http://user-service:8000/
-          predicates:
-            - Path=/api/users/**
-          filters:
-            - RewritePath=/api/users/(?<segment>.*), /api/user/$\{segment}
-            
         - id: event-service
           uri: http://event-service:8080/
           predicates:
@@ -18,16 +11,16 @@ spring:
           filters:
             - StripPrefix=0
             
-        - id: review-service
-          uri: http://user-service:8000/
-          predicates:
-            - Path=/api/reviews/**
-          filters:
-            - RewritePath=/api/reviews/(?<segment>.*), /api/review/$\{segment}
+        # - id: review-service
+        #   uri: http://user_service-1:8000/
+        #   predicates:
+        #     - Path=/api/reviews/**
+        #   filters:
+        #     - RewritePath=/api/reviews/(?<segment>.*), /api/review/$\{segment}
             
-        # Авторизация через user-service
+        # Authorization through user-service
         - id: auth-service
-          uri: http://user-service:8000/
+          uri: http://user-service-service:8000/
           predicates:
             - Path=/api/auth/**
           filters:
