--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -10,11 +10,9 @@ data:
     gzip_comp_level 6;
 
     server {
-        listen 80;
-
         # Frontend
         location / {
-            proxy_pass http://frontend-service:5173;
+            proxy_pass http://frontend:5173;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -25,24 +23,9 @@ data:
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Organizer Frontend
-        location /organizer {
-            rewrite ^/organizer/(.*)$ /$1 break;
-            proxy_pass http://organizer-frontend-service:5174;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # User Service
-        location /api/user {
-            rewrite ^/api/user/(.*)$ /$1 break;
-            proxy_pass http://user-service-service:8000;
+        # Единый API Gateway для всех API запросов
+        location /api/ {
+            proxy_pass http://api-gateway:8080/api/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -52,15 +35,33 @@ data:
             proxy_connect_timeout 120s;
         }
 
-        # Utils Service For Administrator
-        location /api/admin {
-            proxy_pass http://utils-service-service:8182;
+        # Swagger UI
+        location /swagger-ui/ {
+            proxy_pass http://api-gateway:8080/swagger-ui/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 120s;
-            proxy_connect_timeout 120s;
+        }
+
+        # API Docs
+        location /api-docs/ {
+            proxy_pass http://api-gateway:8080/api-docs/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Actuator
+        location /actuator/ {
+            proxy_pass http://api-gateway:8080/actuator/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
