--- a/kubernetes/parser-service-deployment.yaml
+++ b/kubernetes/parser-service-deployment.yaml
@@ -24,7 +24,10 @@ spec:
         - containerPort: 8080
         env:
         - name: DB_HOST
-          value: "postgres-service"
+          valueFrom:
+              secretKeyRef:
+                name: postgres-secret
+                key: host
         - name: DB_PORT
           value: "5432"
         - name: DB_NAME
