--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -12,7 +12,7 @@ data:
     server {
         # Frontend
         location / {
-            proxy_pass http://frontend:5173;
+            proxy_pass http://frontend-service:5173;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
