--- a/kubernetes/api-gateway-deployment.yml
+++ b/kubernetes/api-gateway-deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api-gateway
+  name: api-gateway-deployment
   labels:
     app: api-gateway
 spec:
