--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -23,6 +23,19 @@ data:
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Frontend
+        location /organizer {
+            proxy_pass http://organizer-frontend-service:5174;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Единый API Gateway для всех API запросов
         location /api/ {
             proxy_pass http://api-gateway:8080/api/;
@@ -33,35 +46,5 @@ data:
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 120s;
             proxy_connect_timeout 120s;
-        }
-
-        # Swagger UI
-        location /swagger-ui/ {
-            proxy_pass http://api-gateway:8080/swagger-ui/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # API Docs
-        location /api-docs/ {
-            proxy_pass http://api-gateway:8080/api-docs/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Actuator
-        location /actuator/ {
-            proxy_pass http://api-gateway:8080/actuator/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
