--- a/kubernetes/nginx-conf-d.yml
+++ b/kubernetes/nginx-conf-d.yml
@@ -24,7 +24,7 @@ data:
         }
 
         # Frontend
-        location /organizer {
+        location /organizer/ {
             proxy_pass http://organizer-frontend-service:5174;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
