--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -193,6 +193,27 @@ services:
     depends_on:
       - postgres
 
+  event_service:
+    build:
+      context: ./event-service
+      dockerfile: Dockerfile
+    ports:
+      - "8001:8001"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/afisha_db
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=admin123
+    networks:
+      - app-network
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8001/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   # Новый сервис для Go-парсера
   parser:
     build:
