--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -24,4 +24,15 @@ server {
         proxy_read_timeout 120s;
         proxy_connect_timeout 120s;
     }
+
+    location /api/events {
+        proxy_pass http://event_service:8001/api/events;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 120s;
+        proxy_connect_timeout 120s;
+    }
 }
