--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,6 @@
 version: '3.8'
 
 services:
-  # Добавляем API Gateway
-  api-gateway:
-    build:
-      context: ./api-gateway
-      dockerfile: Dockerfile
-    ports:
-      - "8090:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-      - JWT_SECRET=SecretKey
-    networks:
-      - app-network
-    depends_on:
-      - user-service
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
   nginx:
     image: nginx:latest
     ports:
@@ -43,11 +22,26 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    # Добавляем зависимость от api-gateway
     depends_on:
-      - api-gateway
-      - frontend
+      - api_gateway
 
+  postgres:
+    image: postgres:latest
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=afisha_db
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin123
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -76,12 +70,11 @@ services:
       - kafka_data_1:/var/lib/kafka/data
     networks:
       - app-network
-    restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "kafka-topics.sh --list --bootstrap-server localhost:9092"]
-      interval: 20s
+      interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 3
 
   kafka-2:
     image: confluentinc/cp-kafka:latest
@@ -101,25 +94,11 @@ services:
       - kafka_data_2:/var/lib/kafka/data
     networks:
       - app-network
-    restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "kafka-topics.sh --list --bootstrap-server localhost:9092"]
-      interval: 20s
+      interval: 30s
       timeout: 10s
-      retries: 5
-
-  redis:
-    image: redis:alpine
-    restart: always
-    networks:
-      - app-network
-    volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      retries: 3
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -136,7 +115,6 @@ services:
       - kafka-2
       - zookeeper
 
-
   frontend:
     build:
       context: ./frontend
@@ -152,13 +130,35 @@ services:
       - /app/node_modules
     networks:
       - app-network
+    depends_on:
+      - api_gateway
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://localhost:5173"]
       interval: 10s
       timeout: 5s
       retries: 3
 
-  user-service:
+  api_gateway:
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - JWT_SECRET=secure_secret_key_for_jwt_token_generation
+    networks:
+      - app-network
+    depends_on:
+      - user_service
+      - event_service
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  user_service:
     build:
       context: ./user-service
       dockerfile: Dockerfile
@@ -167,31 +167,14 @@ services:
     networks:
       - app-network
     depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    environment:
-      # App port
-      - PORT=8000
-      # Database
-      - DB_USER=admin
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_DATABASE=afisha_db
-      - DB_PASSWORD=admin123
-      # Redis
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      # JWT
-      - JWT_SECRET=SecretKey
+      - postgres
 
   event_service:
     build:
       context: ./event-service
       dockerfile: Dockerfile
     ports:
-      - "8001:8001"
+      - "8085:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/afisha_db
       - SPRING_DATASOURCE_USERNAME=admin
@@ -202,7 +185,7 @@ services:
       - postgres
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8001/actuator/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -213,7 +196,6 @@ services:
       dockerfile: Dockerfile
     environment:
       - KAFKA_BROKER=kafka-1:29092
-      # Change to postgres
       - MONGO_URI=mongodb://admin:admin123@mongodb:27017
       - GROUP_ID=1
       - TOPIC=parsing
@@ -224,27 +206,13 @@ services:
     networks:
       - app-network
 
-  rate-calculator:
-    build:
-      context: ./rate-calculator
-      dockerfile: Dockerfile
-    environment:
-      # TODO make topic in Kafka and change DB name
-      - KAFKA_BROKERS=kafka-1:29092,kafka-2:29093
-      - KAFKA_TOPIC=product_rating_update
-      - PG_CONN_STR=dbname=your_db user=admin password=admin123 host=postgres
-    networks:
-      - app-network
-    depends_on:
-      - kafka-1
-      - kafka-2
-      - postgres
-
 networks:
   app-network:
     driver: bridge
 
 volumes:
+  postgres_data:
+  mongodb_data:
   kafka_data_1:
   kafka_data_2:
-  redis_data:
+  pgadmin_data:
