--- a/event-service/src/main/resources/application-k8s.properties
+++ b/event-service/src/main/resources/application-k8s.properties
@@ -1,5 +1,5 @@
 # Конфигурация подключения к PostgreSQL для кластера Kubernetes
-spring.datasource.url=jdbc:postgresql://147.45.254.60:5432/afisha_db
+spring.datasource.url=jdbc:postgresql://147.45.254.60:5432/afisha
 spring.datasource.username=${POSTGRES_USERNAME:admin}
 spring.datasource.password=${POSTGRES_PASSWORD:admin123}
 spring.datasource.driver-class-name=org.postgresql.Driver
