--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -31,3 +31,29 @@ spring.security.user.password=admin123
 # Настройки Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+# Настройки CORS
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+
+# Swagger UI настройки
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.cache.disabled=true
+springdoc.show-actuator=true
+
+# Сканирование пакетов и путей
+springdoc.packagesToScan=ru.securitytrip.auth_service.controller
+springdoc.pathsToMatch=/auth/**,/**
+
+# Для отладки Swagger
+logging.level.org.springdoc=TRACE
+logging.level.io.swagger.v3=TRACE
+logging.level.org.springframework.web=DEBUG
+
+# Отключение проверок безопасности для локальной разработки
+spring.security.filter.dispatcher-types=REQUEST,ERROR
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
