--- a/api-gateway/src/main/resources/application-k8s.yml
+++ b/api-gateway/src/main/resources/application-k8s.yml
@@ -20,18 +20,29 @@ spring:
             
         # Authorization through user-service
         - id: auth-service
-          uri: http://user-service-service:8000/
+          uri: http://user-service-service:8000
           predicates:
             - Path=/api/auth/**
           filters:
             - RewritePath=/api/auth/(?<segment>.*), /auth/$\{segment}
 
   main:
-    web-application-type: reactive
+    web-application-type: REACTIVE
 
 # Настройки JWT
 jwt:
   secret: ${JWT_SECRET:SecretKey}
+
+# Настройки springdoc OpenAPI
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+  api-docs:
+    path: /api-docs
+    enabled: true
+  packages-to-scan: com.turnofevents.apigateway
+  paths-to-match: /api/**
 
 management:
   endpoints:
@@ -40,7 +51,7 @@ management:
         include: "*"
   endpoint:
     health:
-      show-details: always
+      show-details: ALWAYS
 
 logging:
   level:
