--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -17,7 +17,7 @@ jwt.refresh-expiration=604800000
 
 # Настройки сервера
 server.port=8080
-spring.application.name=event-service
+spring.application.name=user-service
 
 # Настройки логирования
 logging.level.org.hibernate=INFO
