--- a/user-service/src/main/resources/application-k8s.properties
+++ b/user-service/src/main/resources/application-k8s.properties
@@ -30,6 +30,5 @@ spring.security.user.password=${ADMIN_PASSWORD:admin123}
 
 # Настройки Actuator
 management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
-
-management.health.db.enabled=false
