--- a/api-gateway/src/main/resources/application-k8s.yml
+++ b/api-gateway/src/main/resources/application-k8s.yml
@@ -24,7 +24,7 @@ spring:
           predicates:
             - Path=/api/auth/**
           filters:
-            - RewritePath=/api/auth/(?<segment>.*), /auth/$\{segment}
+            - RewritePath=/api/auth/(?<segment>.*), /auth/${segment}
 
   main:
     web-application-type: REACTIVE
@@ -58,4 +58,4 @@ logging:
     root: INFO
     org.springframework.cloud.gateway: DEBUG
     reactor.netty: INFO
-    com.turnofevents.apigateway: INFO 
+    com.turnofevents.apigateway: INFO
