--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -24,7 +24,7 @@ spring:
           predicates:
             - Path=/api/auth/**
           filters:
-            - RewritePath=/api/auth/(?<segment>.*), /auth/$\{segment}
+            - RewritePath=/api/auth/(?<segment>.*),/auth/${segment}
 
         # - id: user-service
         #   uri: http://user-service:8000/  # укажите корректный адрес и порт вашего user-service
