--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,42 +1,33 @@
-server:
-  port: 8080
-
 spring:
   application:
     name: api-gateway
   cloud:
     gateway:
       routes:
-        - id: user-service
-          uri: http://user_service:8000/
-          predicates:
-            - Path=/api/users/**
-          filters:
-            - RewritePath=/api/users/(?<segment>.*), /api/user/$\{segment}
-            
         - id: event-service
-          uri: http://event_service:8080/
+          uri: http://event-service:8080/
           predicates:
             - Path=/api/events/**
           filters:
             - StripPrefix=0
             
-        - id: review-service
-          uri: http://user_service:8000/
-          predicates:
-            - Path=/api/reviews/**
-          filters:
-            - RewritePath=/api/reviews/(?<segment>.*), /api/review/$\{segment}
+        # - id: review-service
+        #   uri: http://user_service-1:8080/
+        #   predicates:
+        #     - Path=/api/reviews/**
+        #   filters:
+        #     - RewritePath=/api/reviews/(?<segment>.*), /api/review/$\{segment}
             
-        # Авторизация через user-service
+        # Authorization through user-service
         - id: auth-service
-          uri: http://user_service:8000/
+          uri: http://user-service-service:8080
           predicates:
             - Path=/api/auth/**
           filters:
-            - RewritePath=/api/auth/(?<segment>.*), /auth/$\{segment}
+            - RewritePath=/api/auth/(?<segment>.*),/auth/${segment}
+
   main:
-    web-application-type: reactive
+    web-application-type: REACTIVE
 
 # Настройки JWT
 jwt:
@@ -49,4 +40,11 @@ management:
         include: "*"
   endpoint:
     health:
-      show-details: always
+      show-details: ALWAYS
+
+logging:
+  level:
+    root: INFO
+    org.springframework.cloud.gateway: DEBUG
+    reactor.netty: INFO
+    com.turnofevents.apigateway: DEBUG 
