--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,15 +30,16 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=afisha_db
+      - POSTGRES_DB=usersDB
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin123
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init-multiple-dbs.sql:/docker-entrypoint-initdb.d/init-multiple-dbs.sql
     networks:
       - app-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin"]
+      test: [ "CMD-SHELL", "pg_isready -U admin" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -162,6 +163,8 @@ services:
     build:
       context: ./user-service
       dockerfile: Dockerfile
+    environment:
+      SPRING_PROFILES_ACTIVE: "docker"
     ports:
       - "8000:8000"
     networks:
@@ -176,16 +179,17 @@ services:
     ports:
       - "8085:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/afisha_db
-      - SPRING_DATASOURCE_USERNAME=admin
-      - SPRING_DATASOURCE_PASSWORD=admin123
+      SPRING_PROFILES_ACTIVE: "docker"
+      SPRING_DATASOURCE_URL: "jdbc:postgresql://postgres:5432/eventsDB"
+      SPRING_DATASOURCE_USERNAME: "admin"
+      SPRING_DATASOURCE_PASSWORD: "admin123"
     networks:
       - app-network
     depends_on:
       - postgres
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health"]
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/actuator/health" ]
       interval: 10s
       timeout: 5s
       retries: 5
