--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       retries: 3
     depends_on:
       - api_gateway
+      - frontend
 
   postgres:
     image: postgres:latest
@@ -121,7 +122,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "5173:5173"
+      - "5173:80"
     environment:
       - NODE_ENV=development
       - VITE_API_URL=http://localhost/api
