--- a/kubernetes/postgres-init-configmap.yml
+++ b/kubernetes/postgres-init-configmap.yml
@@ -4,5 +4,5 @@ metadata:
   name: postgres-initdb-config
 data:
   init-multiple-dbs.sql: |
-    CREATE DATABASE usersDB;
-    CREATE DATABASE eventsDB;
+    CREATE DATABASE "usersDB";
+    CREATE DATABASE "eventsDB";
