--- a/kubernetes/postgres-deployment.yml
+++ b/kubernetes/postgres-deployment.yml
@@ -19,6 +19,13 @@ spec:
         image: postgres:15
         ports:
         - containerPort: 5432
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
         env:
         - name: POSTGRES_USER
           valueFrom:
@@ -31,7 +38,7 @@ spec:
               name: postgres-secret
               key: password
         - name: POSTGRES_DB
-          value: usersDB
+          value: defaultdb # Важно: не usersDB и не eventsDB!
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
