--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Конфигурация подключения к PostgreSQL
-spring.datasource.url=jdbc:postgresql://postgres:5432/afisha_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventsDB
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
