--- a/event-service/src/main/resources/application-docker.properties
+++ b/event-service/src/main/resources/application-docker.properties
@@ -26,3 +26,9 @@ spring.security.user.password=admin123
 # Настройки Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+#Swagger
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
