--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -12,18 +12,21 @@ gzip on;
         }
         # ...остальные location...
         # Organizer Frontend
-        #location /organizer/ {
-        #    # Важно: Добавляем trailing slash в proxy_pass
-        #    proxy_pass http://organizer-frontend-service:5173/;
-        #    proxy_http_version 1.1;
-        #    proxy_set_header Upgrade $http_upgrade;
-        #    proxy_set_header Connection 'upgrade';
-        #    proxy_set_header Host $host;
-        #    proxy_cache_bypass $http_upgrade;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #    proxy_set_header X-Forwarded-Proto $scheme;
-        #}
+        location /organizer/ {
+            # Удаляем префикс /organizer/ перед проксированием
+            proxy_pass http://organizer-fronted:5174/;
+            rewrite ^/organizer/(.*)$ /$1 break;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
 
         # API Gateway
         location /api/ {
