--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -10,21 +10,17 @@ gzip on;
             return 200 'ok';
             add_header Content-Type text/plain;
         }
-        # ...остальные location...
+
         # Organizer Frontend
         location /organizer/ {
-            # Удаляем префикс /organizer/ перед проксированием
             proxy_pass http://organizer-fronted:5174/;
-            rewrite ^/organizer/(.*)$ /$1 break;
-
             proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 120s;
+            proxy_connect_timeout 120s;
         }
 
 
