--- a/user-service/src/main/resources/application-docker.properties
+++ b/user-service/src/main/resources/application-docker.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Настройки jwt
-jwt.secret=D4fN8Qr6Zu1WgX9Cv3PyL5Mk2Jh7Vt0s
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 jwt.refresh-expiration=604800000
 
