--- a/user-service/src/main/resources/application-k8s.properties
+++ b/user-service/src/main/resources/application-k8s.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Настройки jwt
-jwt.secret=${JWT_SECRET:D4fN8Qr6Zu1WgX9Cv3PyL5Mk2Jh7Vt0s}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION:86400000}
 jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
 
