--- a/kubernetes/api-gateway-deployment.yml
+++ b/kubernetes/api-gateway-deployment.yml
@@ -23,6 +23,11 @@ spec:
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: "k8s"
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: jwt-secret
+              key: secret
         resources:
           limits:
             memory: "700Mi"
